--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
     "version": "0.0.0",
     "scripts": {
         "dev": "vite",
-        "build": "build.sh",
-        "vite-build": "vite build",
+        "build": "vite build",
         "serve": "vite preview"
     },
     "dependencies": {
