--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,6 +19,8 @@
   "theme_color": "#ffffff",
   "share_target": {
     "action": "/share",
+    "method": "GET",
+    "enctype": "application/x-www-form-urlencoded",
     "params": {
       "title": "title",
       "text": "text",
